[tool.poetry]
name = "health-bot"
version = "0.1.0"
description = ""
authors = ["satishgunasekaran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-together = "^0.2.0"
langchain = "^0.3.6"
langchain-core = "^0.3.14"
streamlit = "^1.39.0"
langchain-community = "^0.3.4"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
